# lin_trans

./: .gitignore  COMMIT_MESSAGE.md  LICENSE  README_incremental_build.md  Readme.md  api_client.py  billing_failure_fix_plan.md  billing_logic_adjustment.md  build.py  build_nuitka_main.py  check_syntax.py  config.json  create_spec.py  incremental_build.py  install_build.py  nu_buidl_tt.py  pr_description.md  project_structure.txt  pyproject.toml  quick_build.py  requirements.txt  requirements2.txt  run.py  sp.py  start.py  tbuild.py  test_balance_sync.py  xc.py  xd.py  xf2.py
.credentials/: aliyun_credentials.enc
.cursor/rules/: RIPER-5-CN.mdc
.github/workflows/: build-installers.yml  build.yml  nuitka-build.yml  qodana_code_quality.yml
.serena/: project.yml
agent/: __init__.py  agent_prompt.py  common_agent.py  enhanced_common_agent.py  fast_kimi.py  kimi_agent.py  model_down.py  qwen_agent.py  srt_translator_adapter.py  tanslate_agent.py  tencent.py  terminology_manager.py  translator.py  videolingo_translator.py  zhipu_agent.py
api/: auth.py  features.py  transactions.py  user.py
app/: listen.py  listen_old.py  smart_sentence_processor.py  to_small_video.py  video_tools.py  语音识别流程.md  语音识别流程.mmd
app/core/: config.py  (+9 more)
components/: lin_resource.qrc  lin_resource_rc.py  resource_manager.py  update_resources.py
config/: api_config.yaml  key_config.yaml
creat/: clean_files.py  install_wheels.py  pystand安装.md  ss.py
docs/: CONFIG.md  README.md  README_TOKEN_SERVICE.md  credentials_usage.md  interface_implementation_pattern.md
example/: clent_use.py  clent_use_thread.py  concurrent_api_calls.py  concurrent_api_practical.py  concurrent_api_simple.py  concurrent_api_ui.py  concurrent_ui_with.py  quick_start.py  recharge_use.py  translate_use.py  use_feature_app.py
examples/: pagination_advanced_example.py  pagination_example.py
fftools/: listen.py  ll2.py  to_small_video.py  trans_video.py  video_tools.py
hooks/: hook-funasr.py
nice_ui/: resource_manager.py
niceui/: 1__主页.py
orm/: inint.py  linlin.db  linlin2.db  models.py  queries.py  queries_backup_20251009_180934.py
services/: config_manager.py  decorators.py  llm_client.py
test/: ta_asr_result.json  test_asr_cloud.py  test_funasr_snese_sub.py  test_funasr_zn_sub.py  test_nlp_file.py  test_parse_transcription.py  test_sentence_len.py  test_sub.py
tmp/: asr_tasks.json  lin_resource.qrc  lin_resource_rc.py
tools/: about_time.py  config_tool.py  generate_credentials.py  log.py  read_config.py  remove_srt_translation.py
utils/: __init__.py  about_time.py  agent_dict.py  config_manager.py  crypto_gui.py  crypto_utils.py  file_utils.py  funasr_init.py  key_config_utils.py  lazy_loader.py  log.py  read_config.py  utils2.py
videotrans/: __init__.py
website/: introduction.md
xff/: history_use.py  recharge_client_example.py  use_feature_app.py
(+158 files in other folders)
