[project]
name = "lin-trans"
version = "0.2.1"
description = ""
authors = [
    {name = "riftcover", email = "44368727+riftcover@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "httpx==0.27.2",
    "loguru==0.7.3",
    "modelscope==1.25.0",
    "openai==1.76.0",
    "sqlalchemy==2.0.40",
    "socksio==1.0.0",
    "packaging==25.0",
    "darkdetect==0.8.0",
    "colorthief==0.2.1",
    "path>=17.0.0",
    "scipy==1.15.2",
    "nuitka==2.7.12",
    "numpy==1.24.4",
    "pysidesix-frameless-window==0.4.3",
    "torch==2.4.1",
    "torchaudio==2.4.1",
    "funasr==1.2.6",
    "pydantic>=2.9.2",
    "pyside6==6.7.2", # 必须这个版本，使用6.8.0 do_work() 线程工作完成后会卡住，无法进行下一步. mac上：6.7.2版本设置页ui显示错误， 6.9.1版本ui正确功能未验证
    "pyinstaller>=6.11.0",
    "av==14.4.0",
    "alibabacloud-oss-v2==1.1.0",
    "dashscope==1.23.1",
    "pydantic_settings==2.9.1",
    "dotenv==0.9.9",
    "pytz>=2025.2",
    "pip>=25.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]